# pa

./: .gitignore  README.md  justfile  plan.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
docs/: registrations.md
pa/: __init__.py  __main__.py  agent_template.yaml  builtin_instructions.py  capability.py  cli.py  conversation.py  history.py  manifest.py  monty_bridge.py  primitives.py  progress.py  pydantic_ai_compat.py  registration_runtime.py  registration_tools.py  registrations.py  runtime.py  runtime_capabilities.py  slots.py  state.py
tests/: conftest.py  test_before_tool_hook.py  test_history.py  test_integration.py  test_manifest.py  test_monty_bridge.py  test_pydantic_ai_compat.py  test_registration_compaction.py  test_registration_guard.py  test_registration_instruction.py  test_self_improvement.py  test_state.py
