[project]
name = "pa"
version = "0.1.0"
description = "Self-evolving Pydantic-AI agent harness. Agents extend themselves by writing Monty registrations."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
authors = [{ name = "Bill Easton", email = "bill@pydantic.dev" }]
dependencies = [
    "pydantic-ai-slim[anthropic,openai,logfire]>=1.95.1",
    "pydantic-ai-harness[code-mode]>=0.2.0",
    "pydantic-monty>=0.0.17",
    "pydantic>=2.10",
    "pyyaml>=6.0.2",
    "typer>=0.15.0",
    "rich>=13.9",
    "httpx>=0.27",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
logfire = ["logfire>=3.0"]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "pytest-cov>=6", "ruff>=0.7", "pyright>=1.1"]

[project.scripts]
pa = "pa.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pa"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::logfire._internal.config.LogfireNotConfiguredWarning",
]
